syntax = "proto3";

option java_package = "net.matsudamper.folderviewer.repository.proto";
option java_multiple_files = true;

message BrowserPreferencesProto {
  FolderBrowserSortConfigProto folder_browser_sort = 1;
  SortConfigProto file_browser_sort = 2;
  DisplayConfigProto folder_browser_display = 3;
  DisplayConfigProto file_browser_display = 4;
}

message FolderBrowserSortConfigProto {
  SortConfigProto folder_sort = 1;
  SortConfigProto file_sort = 2;
}

message SortConfigProto {
  SortKey key = 1;
  bool is_ascending = 2;

  enum SortKey {
    NAME = 0;
    DATE = 1;
    SIZE = 2;
  }
}

message DisplayConfigProto {
  DisplayMode mode = 1;

  enum DisplayMode {
    LIST = 0;
    GRID = 1;
  }
}
